# research_interest_tagger

./: LICENSE.txt  README.md  classification_server.py  pyproject.toml  retrain_models.py
py2/: classification_server.py
